@@ -61,7 +61,12 @@
 		<memcachedSessionManager.version>2.3.2</memcachedSessionManager.version>
 		<jaxb.version>2.3.1</jaxb.version>
 		<jaxbcore.version>2.3.0.1</jaxbcore.version>
+<<<<<<< HEAD
     	<jackson.version>2.12.3</jackson.version>
+=======
+    <jackson.version>2.12.3</jackson.version>
+		<juno.webpack.skip>false</juno.webpack.skip>
+>>>>>>> SA-52
 	</properties>
 	<repositories>
 		<repository>
@@ -401,13 +406,20 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+			<version>1.2.6</version>
+		</dependency>
+<!--
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-<!--
+&lt;!&ndash;
 			<scope>provided</scope>
--->
+&ndash;&gt;
 			<version>1.2</version>
 		</dependency>
+-->
 		<dependency>
 			<groupId>taglibs</groupId>
 			<artifactId>standard</artifactId>
@@ -1709,6 +1721,7 @@
 							<version>1.18.20</version>
 						</path>
 					</annotationProcessorPaths>
+					<useIncrementalCompilation>false</useIncrementalCompilation>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -1758,22 +1771,62 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<systemPropertyVariables>
+						<oscar.skip.dbinit>${oscar.dbinit.skip}</oscar.skip.dbinit>
+						<buildDirectory>${project.build.directory}</buildDirectory>
+					</systemPropertyVariables>
+					<excludes>
+						<exclude>**/AR2005*.java</exclude>
+						<exclude>**/OntarioMDSpec4DataTest.java</exclude>
+						<exclude>**/ONAREnhancedBornConnectorTest.java</exclude>
+						<exclude>integration/tests/*</exclude>
+						<exclude>org/oscarehr/common/dao/**/*</exclude>
+						<exclude>org/oscarehr/e2e/populator/body/*</exclude>
+						<exclude>org/oscarehr/e2e/populator/header/*</exclude>
+						<exclude>org/oscarehr/e2e/model/**/*</exclude>
+						<exclude>org/oscarehr/eform/parser/**/*</exclude>
+						<exclude>org/oscarehr/eyeform/dao/**/*</exclude>
+						<exclude>org/oscarehr/labs/alberta/*</exclude>
+						<exclude>org/oscarehr/PMmodule/dao/**/*</exclude>
+						<exclude>org/oscarehr/billing/CA/ON/dao/**/*</exclude>
+						<exclude>org/oscarehr/billing/CA/dao/**/*</exclude>
+						<exclude>org/oscarehr/billing/CA/BC/dao/**/*</exclude>
+						<exclude>org/oscarehr/hospitalReportManager/dao/**/*</exclude>
+						<exclude>org/oscarehr/research/eaaps/EaapsIntegrationTest.java</exclude>
+						<exclude>org/oscarehr/research/eaaps/EaapsHandlerTest.java</exclude>
+						<exclude>org/oscarehr/labs/alberta/UploadingTest.java</exclude>
+						<exclude>org/oscarehr/managers/DemographicManagerTest.java</exclude>
+						<exclude>org/oscarehr/appointment/service/AppointmentStatusServiceTest.java</exclude>
+						<exclude>org/oscarehr/ws/conversion/DemographicConverterTest.java</exclude>
+						<exclude>org/oscarehr/casemgmt/service/DefaultNoteServiceTest.java</exclude>
+						<exclude>org/oscarehr/e2e/constant/ConstantsTest.java</exclude>
+						<exclude>org/oscarehr/e2e/util/EverestUtilsTest.java</exclude>
+						<exclude>org/oscarehr/e2e/director/E2ECreatorTest.java</exclude>
+						<exclude>org/oscarehr/e2e/populator/PopulatorTest.java</exclude>
+						<exclude>org/oscarehr/e2e/populator/body/AbstractBodyPopulatorTest.java</exclude>
+						<exclude>org/oscarehr/e2e/populator/AbstractPopulatorTest.java</exclude>
+						<exclude>org/oscarehr/e2e/populator/AbstractPopulatorTest.java</exclude>
+						<exclude>org/oscarehr/integration/born/ONAREnhancedBornConnectorTest.java</exclude>
+						<exclude>org/oscarehr/integration/born/AR2005BornConnectorTest.java</exclude>
+						<exclude>org/oscarehr/integration/born/AR2005Form2XMLTest.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>default-test</id>
+						<id>pre-integration-test</id>
+						<phase>pre-integration-test</phase>
 						<goals>
 							<goal>test</goal>
 						</goals>
-						<phase>test</phase>
 						<configuration>
 							<skipTests>false</skipTests>
-							<argLine>-Xms1024m -Xmx1024m -Xss256k -XX:MaxNewSize=64m -XX:MaxPermSize=192m</argLine>
-							<excludes>
-								<exclude>**/AR2005*.java</exclude>
-								<exclude>**/OntarioMDSpec4DataTest.java</exclude>
-								<exclude>**/ONAREnhancedBornConnectorTest.java</exclude>
-								<exclude>integration/tests/*</exclude>
-							</excludes>
+							<argLine>-Xms512m -Xmx512m -Xss256k -XX:MaxNewSize=64m</argLine>
+							<test>SetupDatabase</test>
 							<systemPropertyVariables>
 								<oscar.skip.dbinit>${oscar.dbinit.skip}</oscar.skip.dbinit>
 								<buildDirectory>${project.build.directory}</buildDirectory>
@@ -1781,9 +1834,64 @@
 						</configuration>
 					</execution>
 				</executions>
-				<version>2.10</version>
 			</plugin>
-            <plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>integration/tests/*</include>
+						<include>org/oscarehr/common/dao/**/*</include>
+						<include>org/oscarehr/e2e/populator/body/*</include>
+						<include>org/oscarehr/e2e/populator/header/*</include>
+						<include>org/oscarehr/e2e/model/**/*</include>
+						<include>org/oscarehr/eform/parser/**/*</include>
+						<include>org/oscarehr/eyeform/dao/**/*</include>
+						<include>org/oscarehr/labs/alberta/*</include>
+						<include>org/oscarehr/PMmodule/dao/**/*</include>
+						<include>org/oscarehr/billing/CA/ON/dao/**/*</include>
+						<include>org/oscarehr/billing/CA/dao/**/*</include>
+						<include>org/oscarehr/billing/CA/BC/dao/**/*</include>
+						<include>org/oscarehr/hospitalReportManager/dao/**/*</include>
+						<include>org/oscarehr/research/eaaps/EaapsIntegrationTest.java</include>
+						<include>org/oscarehr/research/eaaps/EaapsHandlerTest.java</include>
+						<include>org/oscarehr/labs/alberta/UploadingTest.java</include>
+						<include>org/oscarehr/managers/DemographicManagerTest.java</include>
+						<include>org/oscarehr/appointment/service/AppointmentStatusServiceTest.java</include>
+						<include>org/oscarehr/ws/conversion/DemographicConverterTest.java</include>
+						<include>org/oscarehr/casemgmt/service/DefaultNoteServiceTest.java</include>
+						<include>org/oscarehr/e2e/constant/ConstantsTest.java</include>
+						<include>org/oscarehr/e2e/util/EverestUtilsTest.java</include>
+						<include>org/oscarehr/e2e/director/E2ECreatorTest.java</include>
+						<include>org/oscarehr/e2e/populator/PopulatorTest.java</include>
+						<include>org/oscarehr/e2e/populator/body/AbstractBodyPopulatorTest.java</include>
+						<include>org/oscarehr/e2e/populator/AbstractPopulatorTest.java</include>
+						<include>org/oscarehr/e2e/populator/AbstractPopulatorTest.java</include>
+						<include>org/oscarehr/integration/born/ONAREnhancedBornConnectorTest.java</include>
+						<include>org/oscarehr/integration/born/AR2005BornConnectorTest.java</include>
+						<include>org/oscarehr/integration/born/AR2005Form2XMLTest.java</include>
+					</includes>
+					<excludes>
+						<exclude>**/SetupDatabase.java</exclude>
+					</excludes>
+					<skipTests>false</skipTests>
+					<argLine>-Xms512m -Xmx512m -Xss256k -XX:MaxNewSize=64m</argLine>
+					<systemPropertyVariables>
+						<oscar.skip.dbinit>true</oscar.skip.dbinit>
+					</systemPropertyVariables>
+					<useManifestOnlyJar>false</useManifestOnlyJar>
+				</configuration>
+				<executions>
+					<execution>
+						<id>verify</id>
+						<goals>
+							<goal>verify</goal>
+						</goals>
+						<phase>integration-test</phase>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.oscarehr</groupId>
 				<artifactId>oscar-il18n-check-plugin</artifactId>
 				<version>1.0</version>
@@ -1888,6 +1996,7 @@
 							<value>${project.build.directory}/openapi/</value>
 						</systemProperty>
 					</systemProperties>
+					<skip>${juno.webpack.skip}</skip>
 				</configuration>
 			</plugin>
 
@@ -1909,6 +2018,7 @@
 							<inputSpec>${project.build.directory}/openapi/openapi.json</inputSpec>
 							<generatorName>typescript-angularjs</generatorName>
 							<output>src/main/frontend/generated/</output>
+							<skip>${juno.webpack.skip}</skip>
 						</configuration>
 					</execution>
 				</executions>
@@ -1959,6 +2069,7 @@
 							<target>
 								<exec resolveexecutable="true" executable="fix_openapi_generate_hack.sh"></exec>
 							</target>
+							<skip>${juno.webpack.skip}</skip>
 						</configuration>
 					</execution>
 				</executions>
@@ -1977,6 +2088,7 @@
 							<followSymlinks>false</followSymlinks>
 						</fileset>
 					</filesets>
+					<skip>${juno.webpack.skip}</skip>
 				</configuration>
 			</plugin>
 
@@ -2063,6 +2175,7 @@
 					<!-- <workingDirectory>${basedir}/src/main/webapp/juno</workingDirectory> -->
 					<installDirectory>target</installDirectory>
 					<nodeVersion>v6.10.3</nodeVersion>
+					<skip>${juno.webpack.skip}</skip>
 				</configuration>
 
 				<executions>
@@ -2303,115 +2416,78 @@
           </build>
         </profile>
         <profile>
-          <!-- run maven with -Dregenerate-source=true to re-generate files defined below -->
-			<id>source-regeneration</id>
-			<activation>
-				<property>
-					<name>regenerate-source</name>
-				</property>
-			</activation>
-			<build>
-				<plugins>
-					<!-- plugin to generate java files from xsd schema, and allow similar ones to implement a shared interface -->
-					<!-- this is used for CDS and HRM schemas for example -->
-					<plugin>
-						<groupId>org.jvnet.jaxb2.maven2</groupId>
-						<artifactId>maven-jaxb2-plugin</artifactId>
-						<version>0.14.0</version>
-						<executions>
-							<execution>
-								<id>cds5.0-schema-generation</id>
-								<goals>
-									<goal>generate</goal>
-								</goals>
-								<phase>generate-resources</phase>
+					<!-- run maven with -Dregenerate-source=true to re-generate files defined below -->
+					<id>source-regeneration</id>
+					<activation>
+						<property>
+							<name>regenerate-source</name>
+						</property>
+					</activation>
+					<build>
+						<plugins>
+							<!-- plugin to generate java files from xsd schema, and allow similar ones to implement a shared interface -->
+							<!-- this is used for CDS and HRM schemas for example -->
+							<plugin>
+								<groupId>org.jvnet.jaxb2.maven2</groupId>
+								<artifactId>maven-jaxb2-plugin</artifactId>
+								<version>0.14.0</version>
+								<executions>
+									<execution>
+										<id>cds5.0-schema-generation</id>
+										<goals>
+											<goal>generate</goal>
+										</goals>
+										<phase>generate-resources</phase>
+										<configuration>
+											<extension>true</extension>
+											<!-- no header to prevent all the generated files being changed on automatic re-compile -->
+											<noFileHeader>true</noFileHeader>
+											<args>
+												<arg>-Xinheritance</arg>
+											</args>
+											<bindingDirectory>${basedir}/src/main/resources/org/oscarehr/common/xml/cds/v5_0</bindingDirectory>
+											<bindingIncludes>
+												<include>bindings.xjb</include>
+											</bindingIncludes>
+											<schemaDirectory>${basedir}/src/main/resources/org/oscarehr/common/xml/cds/v5_0</schemaDirectory>
+											<generateDirectory>${basedir}/src/gen/java</generateDirectory>
+											<generatePackage>xml.cds.v5_0</generatePackage>
+										</configuration>
+									</execution>
+									<execution>
+										<id>hrm4.3-schema-generation</id>
+										<goals>
+											<goal>generate</goal>
+										</goals>
+										<phase>generate-resources</phase>
+										<configuration>
+											<extension>true</extension>
+											<!-- no header to prevent all the generated files being changed on automatic re-compile -->
+											<noFileHeader>true</noFileHeader>
+											<args>
+												<arg>-Xinheritance</arg>
+											</args>
+											<bindingDirectory>${basedir}/src/main/resources/org/oscarehr/common/xml/hrm/v4_3</bindingDirectory>
+											<bindingIncludes>
+												<include>bindings.xjb</include>
+											</bindingIncludes>
+											<schemaDirectory>${basedir}/src/main/resources/org/oscarehr/common/xml/hrm/v4_3</schemaDirectory>
+											<generateDirectory>${basedir}/src/gen/java</generateDirectory>
+											<generatePackage>xml.hrm.v4_3</generatePackage>
+										</configuration>
+									</execution>
+								</executions>
 								<configuration>
 									<extension>true</extension>
-									<!-- no header to prevent all the generated files being changed on automatic re-compile -->
-									<noFileHeader>true</noFileHeader>
-									<args>
-										<arg>-Xinheritance</arg>
-									</args>
-									<bindingDirectory>${basedir}/src/main/resources/org/oscarehr/common/xml/cds/v5_0</bindingDirectory>
-									<bindingIncludes>
-										<include>bindings.xjb</include>
-									</bindingIncludes>
-									<schemaDirectory>${basedir}/src/main/resources/org/oscarehr/common/xml/cds/v5_0</schemaDirectory>
-									<generateDirectory>${basedir}/src/gen/java</generateDirectory>
-									<generatePackage>xml.cds.v5_0</generatePackage>
+									<plugins>
+										<plugin>
+											<groupId>org.jvnet.jaxb2_commons</groupId>
+											<artifactId>jaxb2-basics</artifactId>
+											<version>1.11.1</version>
+										</plugin>
+									</plugins>
 								</configuration>
-							</execution>
-							<execution>
-								<id>hrm4.3-schema-generation</id>
-								<goals>
-									<goal>generate</goal>
-								</goals>
-								<phase>generate-resources</phase>
-								<configuration>
-									<extension>true</extension>
-									<!-- no header to prevent all the generated files being changed on automatic re-compile -->
-									<noFileHeader>true</noFileHeader>
-									<args>
-										<arg>-Xinheritance</arg>
-									</args>
-									<bindingDirectory>${basedir}/src/main/resources/org/oscarehr/common/xml/hrm/v4_3</bindingDirectory>
-									<bindingIncludes>
-										<include>bindings.xjb</include>
-									</bindingIncludes>
-									<schemaDirectory>${basedir}/src/main/resources/org/oscarehr/common/xml/hrm/v4_3</schemaDirectory>
-									<generateDirectory>${basedir}/src/gen/java</generateDirectory>
-									<generatePackage>xml.hrm.v4_3</generatePackage>
-								</configuration>
-							</execution>
-						</executions>
-						<configuration>
-							<extension>true</extension>
-							<plugins>
-								<plugin>
-									<groupId>org.jvnet.jaxb2_commons</groupId>
-									<artifactId>jaxb2-basics</artifactId>
-									<version>1.11.1</version>
-								</plugin>
-							</plugins>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-
-		<profile>
-			<id>integration</id>
-			<activation>
-				<property>
-					<name>environment</name>
-					<value>integration</value>
-				</property>
-			</activation>
-			<properties>
-				<antrun.skip.jspc>true</antrun.skip.jspc>
-			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>default-test</id>
-								<goals>
-									<goal>test</goal>
-								</goals>
-								<phase>test</phase>
-								<configuration>
-									<skipTests>false</skipTests>
-									<argLine>-Xms512m -Xmx512m -Xss256k -XX:MaxNewSize=64m -XX:MaxPermSize=192m</argLine>
-									<test>SetupDatabase</test>
-									<systemPropertyVariables>
-										<oscar.skip.dbinit>${oscar.dbinit.skip}</oscar.skip.dbinit>
-										<buildDirectory>${project.build.directory}</buildDirectory>
-									</systemPropertyVariables>
-								</configuration>
+<<<<<<< HEAD
 							</execution>
 						</executions>
 						<version>2.10</version>
@@ -2610,5 +2686,11 @@
 				</plugins>
 			</build>
 		</profile>
+=======
+							</plugin>
+						</plugins>
+					</build>
+				</profile>
+>>>>>>> SA-52
 	</profiles>
 </project>
